Add dynamic route for staff page, automatically display authors

--- a/routes.yaml
+++ b/routes.yaml
@@ -12,6 +12,9 @@ collections:
     permalink: /events/{slug}/
     template: index
     filter: primary_tag:Events
+  /about/staff/:
+    permalink: /staff/
+    template: staff
 
 taxonomies:
   tag: /tag/{slug}/
